deploy: a05f2d642d9fcb8052d40554ac025d403e96abc4

--- a/acknowledgements/index.html
+++ b/acknowledgements/index.html
@@ -655,7 +655,7 @@ some special recognition:</p>
       <img uk-img data-src="https://avatars.githubusercontent.com/u/551007?v=4" alt="junior" />
       <div>
         <a target="_blank" href="https://github.com/junior">@junior</a>
-        <div>1160 contributions</div>
+        <div>1388 contributions</div>
       </div>
     </div>
   </div>
@@ -665,7 +665,7 @@ some special recognition:</p>
       <img uk-img data-src="https://avatars.githubusercontent.com/u/8783541?v=4" alt="mvandervliet" />
       <div>
         <a target="_blank" href="https://github.com/mvandervliet">@mvandervliet</a>
-        <div>564 contributions</div>
+        <div>580 contributions</div>
       </div>
     </div>
   </div>
@@ -675,7 +675,7 @@ some special recognition:</p>
       <img uk-img data-src="https://avatars.githubusercontent.com/u/5790082?v=4" alt="jeevanjoseph" />
       <div>
         <a target="_blank" href="https://github.com/jeevanjoseph">@jeevanjoseph</a>
-        <div>437 contributions</div>
+        <div>438 contributions</div>
       </div>
     </div>
   </div>
@@ -715,7 +715,7 @@ some special recognition:</p>
       <img uk-img data-src="https://avatars.githubusercontent.com/in/29110?v=4" alt="dependabot[bot]" />
       <div>
         <a target="_blank" href="https://github.com/apps/dependabot">@dependabot[bot]</a>
-        <div>31 contributions</div>
+        <div>32 contributions</div>
       </div>
     </div>
   </div>
@@ -765,6 +765,16 @@ some special recognition:</p>
       <img uk-img data-src="https://avatars.githubusercontent.com/u/8282917?v=4" alt="benofben" />
       <div>
         <a target="_blank" href="https://github.com/benofben">@benofben</a>
+        <div>1 contributions</div>
+      </div>
+    </div>
+  </div>
+  
+  <div class="mbrantner">
+    <div uk-grid class="uk-grid-collapse">
+      <img uk-img data-src="https://avatars.githubusercontent.com/u/1019696?v=4" alt="mbrantner" />
+      <div>
+        <a target="_blank" href="https://github.com/mbrantner">@mbrantner</a>
         <div>1 contributions</div>
       </div>
     </div>
